partial fit update

--- a/mab2rec/testes_otimizacao.ipynb
+++ b/mab2rec/testes_otimizacao.ipynb
@@ -573,7 +573,14 @@
     "\n",
     "        # Otimizar essa função não parece ser algo tão trivial, já que teria que mudar a estrutura do arm_to_status, tendo que mudar vários outros códigos por causa disso\n",
     "        # self._set_arms_as_trained(decisions=decisions, is_partial=False)\n",
-    "        print(f'_set_arms_as_trained acabou em {start_time - time.time()} segundos')"
+    "        print(f'_set_arms_as_trained acabou em {start_time - time.time()} segundos')\n",
+    "    \n",
+    "    def partial_fit(self, decisions: np.ndarray, rewards: np.ndarray, contexts: np.ndarray = None) -> None:\n",
+    "        # Perform parallel fit\n",
+    "        self._parallel_fit(decisions, rewards, contexts)\n",
+    "\n",
+    "        # Update trained arms\n",
+    "        # self._set_arms_as_trained(decisions=decisions, is_partial=True)"
    ]
   },
   {
@@ -1937,7 +1944,30 @@
      "text": [
       "random_values:\n",
       "[0.86002308 0.46425685 0.05731753 ... 0.55642056 0.29540855 0.88488344]\n",
-      "Gerando as predições\n"
+      "Gerando as predições\n",
+      "Gerar as predições demorou 3.8174121379852295 segundos\n",
+      "Formatando as predições\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3799/3799 [00:14<00:00, 268.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatação demorou 14.172178268432617 segundos\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1947,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,6 +2091,7 @@
     "        arm_inds = np.argpartition(-expectations, self.top_k - 1, axis=1)[:, :self.top_k]\n",
     "        arm_inds = arm_inds[np.arange(arm_inds.shape[0]).reshape(-1, 1), np.argsort(-expectations[np.arange(expectations.shape[0]).reshape(-1, 1), arm_inds], axis=1)]\n",
     "        print(f'demorou {time.time() - start_time} segundos')\n",
+    "        \n",
     "\n",
     "        print('gerando lista de recomendações')\n",
     "        start_time = time.time()\n",
@@ -2089,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2097,11 +2128,11 @@
      "output_type": "stream",
      "text": [
       "Training LinGreedy - ALS embeddings\n",
-      "arm_to_model demorou -0.37518835067749023\n",
+      "arm_to_model demorou -0.37044620513916016\n",
       "reset_arm_to_status demorou -4.76837158203125e-07\n",
-      "paralel fit demorou -20.115267276763916\n",
+      "paralel fit demorou -21.2071635723114\n",
       "_set_arms_as_trained acabou em -7.152557373046875e-07 segundos\n",
-      "Treino demorou 24.831020832061768\n",
+      "Treino demorou 25.904112815856934\n",
       "Testing LinGreedy - ALS embeddings\n",
       "entrou\n",
       "saiu\n",
@@ -2109,8 +2140,8 @@
       "random values\n",
       "[0.22733602 0.31675834 0.79736546 ... 0.11546996 0.43684616 0.5604927 ]\n",
       "Gerando as predições\n",
-      "Gerar as predições demorou 3.270416021347046 segundos\n",
-      "predict_expectations demorou 3.2777116298675537 segundos\n",
+      "Gerar as predições demorou 3.122152090072632 segundos\n",
+      "predict_expectations demorou 3.147810697555542 segundos\n",
       "oi2\n",
       "criando matriz de exclusão de arms\n"
      ]
@@ -2119,7 +2150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 270258.33it/s]"
+      "100%|██████████| 3799/3799 [00:00<00:00, 242120.02it/s]"
      ]
     },
     {
@@ -2137,17 +2168,30 @@
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "shape mismatch: indexing arrays could not be broadcast together with shapes (3799,) (3799,10) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTreino demorou \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime\u001b[38;5;241m.\u001b[39mtime()\u001b[38;5;250m \u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;250m \u001b[39mstart_time\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTesting LinGreedy - ALS embeddings\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m hits, hr, spent_time, df_recs_linGreedy \u001b[38;5;241m=\u001b[39m \u001b[43mtest_non_incremental\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlinGreedy_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mitems_mean\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf_test_for_evaluation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minteractions_by_user\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m hits\n",
-      "Cell \u001b[0;32mIn[7], line 12\u001b[0m, in \u001b[0;36mtest_non_incremental\u001b[0;34m(mab_algo, contexts_col, df_test, interactions_by_user)\u001b[0m\n\u001b[1;32m      9\u001b[0m filters \u001b[38;5;241m=\u001b[39m df_test\u001b[38;5;241m.\u001b[39mmerge(interactions_by_user, how\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m'\u001b[39m, on\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser_id\u001b[39m\u001b[38;5;124m'\u001b[39m)[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minteractions\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39msqueeze(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m) \n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msaiu\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m recomendations \u001b[38;5;241m=\u001b[39m \u001b[43mmab_algo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecommend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontexts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilters\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mapply_sigmoid\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m df_test \u001b[38;5;241m=\u001b[39m df_test\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     16\u001b[0m hits \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
-      "Cell \u001b[0;32mIn[35], line 89\u001b[0m, in \u001b[0;36mBanditRecommenderArmEncoded.recommend\u001b[0;34m(self, contexts, excluded_arms, return_scores, apply_sigmoid)\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[38;5;66;03m# Get best `top_k` results by sorting the expectations\u001b[39;00m\n\u001b[1;32m     88\u001b[0m arm_inds \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margpartition(\u001b[38;5;241m-\u001b[39mexpectations, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtop_k \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)[:, :\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtop_k]\n\u001b[0;32m---> 89\u001b[0m arm_inds \u001b[38;5;241m=\u001b[39m arm_inds[np\u001b[38;5;241m.\u001b[39marange(arm_inds\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]), np\u001b[38;5;241m.\u001b[39margsort(\u001b[38;5;241m-\u001b[39m\u001b[43mexpectations\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marange\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexpectations\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marm_inds\u001b[49m\u001b[43m]\u001b[49m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)]\n\u001b[1;32m     90\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdemorou \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime\u001b[38;5;241m.\u001b[39mtime()\u001b[38;5;250m \u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;250m \u001b[39mstart_time\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m segundos\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     92\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgerando lista de recomendações\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: shape mismatch: indexing arrays could not be broadcast together with shapes (3799,) (3799,10) "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "demorou 1.5398893356323242 segundos\n",
+      "gerando lista de recomendações\n",
+      "demorou 0.022856473922729492 segundos\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3799/3799 [00:00<00:00, 14848.00it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "114"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2164,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2172,11 +2216,11 @@
      "output_type": "stream",
      "text": [
       "Training LinGreedy - ALS embeddings\n",
-      "arm_to_model demorou -0.357694149017334\n",
-      "reset_arm_to_status demorou -0.014419794082641602\n",
-      "paralel fit demorou -20.309518814086914\n",
-      "_set_arms_as_trained acabou em -8.352164506912231 segundos\n",
-      "Treino demorou 33.23929977416992\n",
+      "arm_to_model demorou -0.34758901596069336\n",
+      "reset_arm_to_status demorou -0.014176368713378906\n",
+      "paralel fit demorou -21.645429611206055\n",
+      "_set_arms_as_trained acabou em -8.369446516036987 segundos\n",
+      "Treino demorou 34.681090116500854\n",
       "Testing LinGreedy - ALS embeddings\n",
       "entrou\n",
       "saiu\n",
@@ -2184,7 +2228,7 @@
       "random_values:\n",
       "[0.22733602 0.31675834 0.79736546 ... 0.11546996 0.43684616 0.5604927 ]\n",
       "Gerando as predições\n",
-      "Gerar as predições demorou 2.6127946376800537 segundos\n",
+      "Gerar as predições demorou 3.258863687515259 segundos\n",
       "Formatando as predições\n"
      ]
     },
@@ -2192,17 +2236,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:14<00:00, 259.36it/s]\n"
+      "100%|██████████| 3799/3799 [00:14<00:00, 260.35it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatação demorou 14.65119743347168 segundos\n",
-      "predict_expectations demorou 17.308860540390015 segundos\n",
+      "Formatação demorou 14.595404863357544 segundos\n",
+      "predict_expectations demorou 17.90099263191223 segundos\n",
       "oi2\n",
-      "transformação das expectativas demorou 38.526113510131836 segundos\n",
+      "transformação das expectativas demorou 40.458486795425415 segundos\n",
       "oi3\n",
       "criando matriz de exclusão de arms\n"
      ]
@@ -2211,7 +2255,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 275306.00it/s]"
+      "100%|██████████| 3799/3799 [00:00<00:00, 234263.88it/s]"
      ]
     },
     {
@@ -2232,14 +2276,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O restante demorou 8.464432716369629 segundos\n"
+      "O restante demorou 8.468406915664673 segundos\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 15945.35it/s]\n"
+      "100%|██████████| 3799/3799 [00:00<00:00, 15527.39it/s]\n"
      ]
     },
     {
@@ -2267,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2287,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2308,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2318,8 +2362,14 @@
       "oi1\n",
       "random_values:\n",
       "[0.41359923 0.86002308 0.46425685 ... 0.38981406 0.55642056 0.29540855]\n",
-      "Gerando as predições\n",
-      "Gerar as predições demorou 3.0816352367401123 segundos\n",
+      "Gerando as predições\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gerar as predições demorou 4.221867084503174 segundos\n",
       "Formatando as predições\n"
      ]
     },
@@ -2327,17 +2377,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:13<00:00, 284.29it/s]\n"
+      "100%|██████████| 3799/3799 [00:14<00:00, 255.98it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatação demorou 13.366325616836548 segundos\n",
-      "predict_expectations demorou 16.478707313537598 segundos\n",
+      "Formatação demorou 14.846175193786621 segundos\n",
+      "predict_expectations demorou 19.097904920578003 segundos\n",
       "oi2\n",
-      "transformação das expectativas demorou 40.65259027481079 segundos\n",
+      "transformação das expectativas demorou 44.10640597343445 segundos\n",
       "oi3\n",
       "criando matriz de exclusão de arms\n"
      ]
@@ -2346,7 +2396,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 351073.23it/s]"
+      "100%|██████████| 3799/3799 [00:00<00:00, 245795.13it/s]"
      ]
     },
     {
@@ -2367,7 +2417,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O restante demorou 9.166557312011719 segundos\n"
+      "O restante demorou 8.473256826400757 segundos\n"
      ]
     }
    ],
@@ -2377,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2388,8 +2438,8 @@
       "random values\n",
       "[0.41359923 0.86002308 0.46425685 ... 0.38981406 0.55642056 0.29540855]\n",
       "Gerando as predições\n",
-      "Gerar as predições demorou 2.8182523250579834 segundos\n",
-      "predict_expectations demorou 2.829531192779541 segundos\n",
+      "Gerar as predições demorou 3.8285539150238037 segundos\n",
+      "predict_expectations demorou 3.842113733291626 segundos\n",
       "oi2\n",
       "criando matriz de exclusão de arms\n"
      ]
@@ -2398,7 +2448,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 332065.46it/s]"
+      "100%|██████████| 3799/3799 [00:00<00:00, 237444.10it/s]"
      ]
     },
     {
@@ -2419,9 +2469,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "demorou 1.221541404724121 segundos\n",
+      "demorou 1.3862788677215576 segundos\n",
       "gerando lista de recomendações\n",
-      "demorou 0.04281902313232422 segundos\n"
+      "demorou 0.04408979415893555 segundos\n"
      ]
     }
    ],
@@ -2431,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2451,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2471,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
